<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.main.today.MainTodayFragment">

    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="@dimen/icon_weather_size"
        android:layout_height="@dimen/icon_weather_size"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@null"
        android:contentDescription="@string/content_description"
        android:scaleType="fitCenter"
        android:src="@drawable/hourly" />

    <TextView
        android:id="@+id/temperatureText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:gravity="center"
        android:text="@string/content_description"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_huge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_big"
        android:gravity="center"
        android:text="@string/content_description"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/detailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/details"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small" />

    <LinearLayout
        android:id="@+id/temperatureLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/temperatureDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_weight="1"
            android:text="@string/temperature"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/temperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:gravity="end"
            android:text="@string/content_description"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/feelslikeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/feelslikeDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_weight="1"
            android:text="@string/feelslike"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/feelslikeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:gravity="end"
            android:text="@string/content_description"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/humidityLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/humidityDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_weight="1"
            android:text="@string/humidity"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/humidityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:gravity="end"
            android:text="@string/content_description"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pressureLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pressureDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_weight="1"
            android:text="@string/pressure"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/pressureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:gravity="end"
            android:text="@string/content_description"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>